--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ p {
     text-align: center;
 }
 
-.seba h2 {
+.nico h2 {
     margin-top: 50px;
     margin-bottom: 50px;
     padding: 0;
@@ -335,7 +335,7 @@ p {
     background-color: transparent;
 }
 
-.seba p {
+.nico p {
     margin: 20px;
     padding: 10px;
     color: white;
